--- a/view/bio.html
+++ b/view/bio.html
@@ -5,9 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<link rel="stylesheet" href="./style/style.css">
+<!-- <link rel="stylesheet" href="./style/style.css"> -->
  
     <title>Document</title>
+    <style>
+body{
+   
+   background-color: black;
+     color: white;
+  }
+  h1{
+      text-align: left;
+      
+  }
+  
+  
+  h3{
+      text-align: left;
+  }
+  li{
+      text-align: left;
+      
+  }
+  b{
+      color:burlywood;
+  }
+  em{
+      color: blue;
+  }
+  p{
+      text-align: left;
+  }
+  .close {
+      
+      width: 2em;
+      height: 2em;
+      background-color: white;
+      clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+    }
+    
+    h4{
+      text-align: left;
+    }
+    </style>
 </head>
 <body>
     <a href="#main">
