--- a/view/bio.html
+++ b/view/bio.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<!-- <link rel="stylesheet" href="./style/style.css"> -->
- 
-    <title>Document</title>
     <style>
 body{
    
@@ -47,6 +44,13 @@ body{
     h4{
       text-align: left;
     }
+
+    .icons{
+    display: none;
+}
+.imgText{
+    display: none;
+}
     </style>
 </head>
 <body>
@@ -113,5 +117,6 @@ body{
         
         <p>А ещё мне нравится сериал <em>«Доктор Кто».</em></p>
         <p>А ещё мне нравится Группа <em>«Комсомольск».</em></p>
+        <script src="../script/style.js"></script>
 </body>
 </html>
