--- a/view/bio.html
+++ b/view/bio.html
@@ -45,10 +45,7 @@ body{
       text-align: left;
     }
 
-    .icons{
-    display: none;
-}
-.imgText{
+.tittle , .dateFrom, .icons, .imgText {
     display: none;
 }
     </style>
