--- a/view/bio.html
+++ b/view/bio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    
     <style>
 body{
    
@@ -45,17 +46,12 @@ body{
       text-align: left;
     }
 
-.tittle , .dateFrom, .icons, .imgText {
+.mp,.tittle , .dateFrom, .icons, .imgText {
     display: none;
 }
     </style>
 </head>
 <body>
-    <a href="#main">
-    <div class="close">
-    </div>
-    </a>
-    
                         <h1>Обо мне</h1>
        <p> Я - Frontend веб-разработчик и UI/UX веб-дизайнер. Иногда занимаюсь графическим дизайном. Я живу в Ростовской области России (часовой пояс UTC+3 или MSK+0).
         </p>
