--- a/view/bio.html
+++ b/view/bio.html
@@ -46,13 +46,12 @@ body{
       text-align: left;
     }
 
-.mp,.tittle , .dateFrom, .icons, .imgText {
+.mp,.tittle , .dateFrom, .icons, .imgText,.btn {
     display: none;
 }
     </style>
 </head>
 <body>
-                        <h1>Обо мне</h1>
        <p> Я - Frontend веб-разработчик и UI/UX веб-дизайнер. Иногда занимаюсь графическим дизайном. Я живу в Ростовской области России (часовой пояс UTC+3 или MSK+0).
         </p>
         <h3>Используемое ПО: </h3>
