--- a/view/bio.html
+++ b/view/bio.html
@@ -46,7 +46,7 @@ body{
       text-align: left;
     }
 
-.mp,.tittle , .dateFrom, .icons, .imgText,.btn {
+.mp,.tittle , .dateFrom, .icons, .imgText,.btn, .titlePages1 {
     display: none;
 }
     </style>
